@@ -85,6 +85,7 @@ struct zConfiguration {
 	long host_timeout;
 	int  host_retries;
 	char *name_server;
+	char *dns_bindip;
 #ifdef THROTTLING
 	long throttle_period;
 	char throttle_count;
@@ -169,6 +170,7 @@ extern MODVAR aConfiguration iConf;
 #define HOST_TIMEOUT			iConf.host_timeout
 #define HOST_RETRIES			iConf.host_retries
 #define NAME_SERVER			iConf.name_server
+#define DNS_BINDIP			iConf.dns_bindip
 #define IDENT_CHECK			iConf.ident_check
 #define FAILOPER_WARN			iConf.fail_oper_warn
 #define SHOWCONNECTINFO			iConf.show_connect_info
