@@ -467,3 +467,5 @@
 - Fixed the crule parser to treat - and : as valid 'word' characters rather than separators
   (#0002188) reported by diskman1.
 - Fixed bug in remote version reply, reported by DukePyrolator (#0002180).
+- Added set::dns::bind-ip (rarely ever needed, but might be useful for paranoid people).
+- Some unreal32docs->security section improvements.
